--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ button:hover {
 }
 /* Heading */
 h3,
-label[for='new-task'] {
+span[for='new-task'] {
     color: #333;
     font-weight: 700;
     font-size: 15px;
@@ -84,7 +84,7 @@ input[type="text"]:focus {
 }
 
 /* New Task */
-label[for='new-task'] {
+span[for='new-task'] {
     display: block;
     margin: 0 0 20px;
 }
@@ -109,7 +109,7 @@ li > * {
 li > input[type="checkbox"] {
     margin: 0 10px;
 }
-li > label {
+li > span {
     padding-left: 10px;
     box-sizing: border-box;
     font-size: 18px;
@@ -128,7 +128,7 @@ button.delete img:hover {
 }
 
 /* Completed */
-ul#completed-tasks label {
+ul#completed-tasks span {
     text-decoration: line-through
     color: #888;
 }
@@ -143,6 +143,6 @@ ul li.editMode input[type=text] {
     width:224px
 }
 
-ul li.editMode label {
+ul li.editMode span {
     display:none;
 }
