--- a/style.css
+++ b/style.css
@@ -1,61 +1,65 @@
 /* Basic Style */
-body {
+.body {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
 }
 
-.aaa {
+.banner {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
 
-.aaa img {
+.banner__title {
+  display: none;
+}
+
+.banner__img {
   width: 100%;
 }
 
-.aaa .more_inf {
+.banner__info {
   font-family: fantasy, cursive;
 }
 
 @media (max-width: 768px) {
-  .aaa {
+  .banner {
     text-align: center;
   }
 }
 
-.centered-main-page-element {
+.main {
   display: block;
   width: 500px;
   margin: 0 auto 0;
 }
 
-.task {
+.main__input, .main__subtitle {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
 }
 
-.task-row-wrapper {
+.main__task--wrapper {
   display: flex;
 }
 
-ul {
+.main__list {
   margin: 0;
   padding: 0px;
 }
 
-li, h3 {
+.main__list-item, .main__title {
   list-style: none;
 }
 
-input, button {
+.main__input, .main__button {
   outline: none;
 }
 
-button {
+.main__button {
   background: none;
   border: 0px;
   color: #888;
@@ -65,13 +69,12 @@ button {
   cursor: pointer;
 }
 
-button:hover {
+.main__button:hover {
   color: #3a3a3a;
 }
 
 /* Heading */
-h3,
-span[for='new-task'] {
+.main__title, .main__subtitle-add {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -81,7 +84,7 @@ span[for='new-task'] {
   text-transform: uppercase;
 }
 
-input[type="text"] {
+.main__input {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -94,22 +97,22 @@ input[type="text"] {
   color: #888;
 }
 
-input[type="text"]:focus {
+.main__input:focus {
   color: #333;
 }
 
 /* New Task */
-span[for='new-task'] {
+.main__subtitle-add {
   display: block;
   margin: 0 0 20px;
 }
 
-input#new-task {
+#new-task {
   width: 318px;
 }
 
 /* Task list */
-li {
+.main__list-item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -118,51 +121,51 @@ li {
   align-items: center;
 }
 
-li > * {
+.main__list-item > * {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.main__input-mark {
   margin: 0 10px;
 }
 
-li > span {
+.main__subtitle {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
 
-li > input[type="text"] {
+.main__input-edit {
   width: 226px;
 }
 
-button.delete img {
+.button__img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-button.delete img:hover {
+.button__img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks span {
+#completed-tasks .main__subtitle {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.main__input-edit {
   display: none;
 }
 
-ul li.editMode input[type=text] {
+.main__list-item__edit .main__input-edit {
   display:inline-block;
   width:224px;
 }
 
-ul li.editMode span {
+.main__list-item__edit .main__subtitle {
   display: none;
 }
